--- a/core/pom.xml
+++ b/core/pom.xml
@@ -107,6 +107,10 @@
       <version>0.3.1</version>
     </dependency>
     <dependency>
+      <groupId>commons-net</groupId>
+      <artifactId>commons-net</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.typesafe.akka</groupId>
       <artifactId>akka-actor</artifactId>
     </dependency>
