--- a/pom.xml
+++ b/pom.xml
@@ -326,6 +326,11 @@
         <version>${mesos.version}</version>
       </dependency>
       <dependency>
+        <groupId>commons-net</groupId>
+        <artifactId>commons-net</artifactId>
+        <version>2.2</version>
+      </dependency>
+      <dependency>
         <groupId>io.netty</groupId>
         <artifactId>netty-all</artifactId>
         <version>4.0.0.Beta2</version>
